<resources>
    <string name="app_name">DO Swimmer</string>
    <string name="app_name_version" translatable="false">3.0.1</string>
    <string-array name="main_navigation_array">
        <item>Droplets</item>
        <item>Domains</item>
        <item>Images</item>
        <item>SSH keys</item>
        <item>Regions</item>
        <item>Sizes</item>
        <item>Floating IPs</item>
    </string-array>
    <string-array name="pref_sync_frequency_entries">
        <item name="0">Never (Update manually)</item>
        <item name="1">Every minute</item>
        <item name="30">Every 30 minutes</item>
        <item name="60">Every hour</item>
        <item name="240">Every four hours</item>
        <item name="1440">Every day</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item name="0">0</item>
        <item name="1">1</item>
        <item name="30">30</item>
        <item name="60">60</item>
        <item name="240">240</item>
        <item name="1440">1440</item>
    </string-array>
    <string-array name="pref_locale_entries">
        <item name="0">English</item>
        <item name="1">Deutsch</item>
        <item name="2">繁體中文</item>
        <item name="3">簡體中文</item>
        <item name="4">Русский</item>
        <item name="5">Norsk</item>
        <item name="6">Português</item>
        <item name="7">Türk</item>
        <item name="8">Nederlands</item>
        <item name="9">Svenska</item>
        <item name="10">Română</item>
        <item name="11">Polski</item>
        <item name="12">Español</item>
        <item name="13">日本語</item>
        <item name="14">Italiano</item>
        <item name="15">Français</item>
    </string-array>
    <string-array name="pref_locale_values">
        <item name="0">en</item>
        <item name="1">de</item>
        <item name="2">zh_TW</item>
        <item name="3">zh_CN</item>
        <item name="4">ru</item>
        <item name="5">nb</item>
        <item name="6">pt</item>
        <item name="7">tr</item>
        <item name="8">nl</item>
        <item name="9">sv</item>
        <item name="10">ro</item>
        <item name="11">pl</item>
        <item name="12">es</item>
        <item name="13">ja</item>
        <item name="14">it</item>
        <item name="15">fr</item>
    </string-array>
    <string name="pref_sync_frequency_key_label">Synchronisation interval</string>
    <string name="summary_sync_frequency">Frequency of synchronisation</string>
    <string name="pref_locale_key_label">Language</string>
    <string name="summary_locale">Change Language</string>
    <string name="not_yet_implemented">Not yet implemented</string>
    <string name="no_ssh_client">No SSH client found! Please install one to get this feature.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="no_images">No images!</string>
    <string name="no_regions">No regions!</string>
    <string name="no_sizes">No sizes!</string>
    <string name="no_domains">No domains!</string>
    <string name="no_droplets">No droplets!</string>
    <string name="no_records">No records!</string>
    <string name="no_ssh_keys">No SSH keys!</string>
    <string name="public_visibility">Public</string>
    <string name="private_visibility">Private</string>
    <string name="monthly">Monthly</string>
    <string name="hourly">Hourly</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_switch_account">Switch account</string>
    <string name="action_add_account">Add account</string>
    <string name="backups_active_label">Backups:</string>
    <string name="virtio_active_label">VirtIO:</string>
    <string name="private_networking_active_label">Private networking:</string>
    <string name="ipv6_active_label">IPv6:</string>
    <string name="locked_label">Locked:</string>
    <string name="created_at_label">Created at:</string>
    <string name="memory_label">Memory:</string>
    <string name="disk_label">Disk:</string>
    <string name="cpus_label">CPUs:</string>
    <string name="region_label">Region:</string>
    <string name="image_label">Image:</string>
    <string name="record_type_label">Record type:</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_record">Add record</string>
    <string name="add_ssh_key">Add SSH key</string>
    <string name="visit_domain">Visit</string>
    <string name="ssh_to_droplet">SSH to droplet</string>
    <string name="reboot">Reboot</string>
    <string name="power_cycle">Power cycle</string>
    <string name="power_off">Power off</string>
    <string name="power_on">Power on</string>
    <string name="shut_down">Shut down</string>
    <string name="password_reset">Reset password</string>
    <string name="resize">Resize</string>
    <string name="snapshot">Snapshot</string>
    <string name="restore">Restore</string>
    <string name="rebuild">Rebuild</string>
    <string name="enable_backups">Enable backups</string>
    <string name="disable_backups">Disable backups</string>
    <string name="rename">Rename</string>
    <string name="destroy">Destroy</string>
    <string name="sync">Synchronise</string>
    <string name="settings">Settings</string>
    <string name="synchronising">Synchronising</string>
    <string name="synchronising_keys">Synchronising keys</string>
    <string name="synchronising_keys_completed">Synchronising keys completed</string>
    <string name="synchronising_images">Synchronising images</string>
    <string name="synchronising_images_completed">Synchronising images completed</string>
    <string name="synchronising_domains">Synchronising domains</string>
    <string name="synchronising_domains_completed">Synchronising domains completed</string>
    <string name="synchronising_droplets">Synchronising droplets</string>
    <string name="synchronising_droplets_completed">Synchronising droplets completed</string>
    <string name="synchronising_sizes">Synchronising sizes</string>
    <string name="synchronising_sizes_completed">Synchronising sizes completed</string>
    <string name="synchronising_regions">Synchronising regions</string>
    <string name="synchronising_regions_completed">Synchronising regions completed</string>
    <string name="access_denied_message">Access denied! Please make sure your Client ID and API key are correct.</string>
    <string name="action_add_droplet">Add droplet</string>
    <string name="action_add_domain">Add domain</string>
    <string name="action_add_record">Add record</string>
    <string name="action_add_ssh_key">Add SSH key</string>
    <string name="hostname_label">Hostname:</string>
    <string name="select_size_label">Select size:</string>
    <string name="select_image_label">Select image:</string>
    <string name="select_region_label">Select region:</string>
    <string name="select_droplet_label">Select droplet:</string>
    <string name="ssh_keys_label">SSH keys:</string>
    <string name="private_networking_label">Private networking</string>
    <string name="domain_name_label">Domain name</string>
    <string name="create_droplet">Create droplet</string>
    <string name="create_domain">Create domain</string>
    <string name="create_account">Save account</string>
    <string name="save_account">Save account</string>
    <string name="creating_droplet">Creating droplet</string>
    <string name="creating_domain">Creating domain</string>
    <string name="creating_record">Creating record</string>
    <string name="destroying_domain">Destroying domain</string>
    <string name="destroying_record">Destroying record</string>
    <string name="destroying_ssh_key">Destroying SSH key</string>
    <string name="power_cycle_alert">This will reboot your droplet.\n\nWe recommend rebooting your droplet through the command line, as this action is the same as hard resetting the server and may cause data corruption.\n\nDo you wish to proceed?</string>
    <string name="reboot_alert">This will reboot your droplet.\n\nDo you wish to proceed?</string>
    <string name="shut_down_alert">This will shutdown your droplet.\n\nDo you wish to proceed?</string>
    <string name="power_off_alert">This will power off your droplet.\n\nWe recommend powering off your droplet through the command line, as this action is the same as hard resetting the server and may cause data corruption.\n\nDo you wish to proceed?</string>
    <string name="power_on_alert">This will boot your droplet.\n\nDo you wish to proceed?</string>
    <string name="destroy_droplet_alert">This is irreversible. We will destroy your droplet and all associated backups.\n\nDo you wish to proceed?</string>
    <string name="destroy_ssh_key_alert">Are you sure?</string>
    <string name="restore_alert">This method allows you to restore a droplet with a previous image or snapshot. This will be a mirror copy of the image or snapshot to your droplet. Be sure you have backed up any necessary information prior to restore.</string>
    <string name="rebuild_alert">This method allows you to reinstall a droplet with a default image. This is useful if you want to start again but retain the same IP address for your droplet.</string>
    <string name="enable_backups_alert">This method enables automatic backups which run in the background daily to backup your droplet\'s data.</string>
    <string name="disable_backups_alert">This method disables automatic backups from running to backup your droplet\'s data.</string>
    <string name="destroy_domain_alert">This will destroy your domain. Are you sure?</string>
    <string name="name">Name</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_resize_droplet">Resize droplet</string>
    <string name="title_snapshot_droplet">Take droplet snapshot</string>
    <string name="title_restore_droplet">Restore droplet</string>
    <string name="title_rebuild_droplet">Rebuild droplet</string>
    <string name="summary_api_key">API key</string>
    <string name="api_key_label">API key</string>
    <string name="summary_token">Token used to authenticate the API requests</string>
    <string name="summary_account_name">Account name</string>
    <string name="account_name_label">Account name</string>
    <string name="api_settings_title">API settings</string>
    <string name="preferences_title">Preferences</string>
    <string name="records">Records</string>
    <string name="scrub_data">Scrub data</string>
    <string name="ip_address_label">IP Address:</string>
    <string name="name_label">Name:</string>
    <string name="priority_label">Priority:</string>
    <string name="text_label">Text:</string>
    <string name="port_label">Port:</string>
    <string name="weight_label">Weight:</string>
    <string name="create_record">Create record</string>
    <string name="edit_record">Edit record</string>
    <string name="edit_ssh_key">Edit SSH key</string>
    <string name="saving_ssh_key">Saving SSH key</string>
    <string name="add_existing_account">Add existing account</string>
    <string name="create_new_account">Create new account</string>
    <string name="switch_account">Switch account</string>
    <string name="token_label">Token</string>
    <string name="ipv6_label">IPv6</string>
    <string name="enable_user_data_label">Enable user data</string>
    <string name="summary_auto_start_droplets">Automatically start turned off droplets</string>
    <string name="pref_auto_start_droplets">Auto start</string>
    <string name="summary_clear_data">Clear all the accounts and data saved on this device</string>
    <string name="pref_clear_data">Clear data</string>
    <string name="application_title">Application</string>
</resources>