<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_ssh" android:title="@string/ssh_to_droplet"/>
    <item android:id="@+id/action_reboot" android:title="@string/reboot"/>
    <item android:id="@+id/action_power_cycle" android:title="@string/power_cycle"/>
    <item android:id="@+id/action_shutdown" android:title="@string/shut_down"/>
    <item android:id="@+id/action_power_off" android:title="@string/power_off"/>
    <item android:id="@+id/action_power_on" android:title="@string/power_on"/>
    <item android:id="@+id/action_password_reset" android:title="@string/password_reset"/>
    <item android:id="@+id/action_resize" android:title="@string/resize"/>
    <item android:id="@+id/action_snapshot" android:title="@string/snapshot"/>
    <item android:id="@+id/action_restore" android:title="@string/restore"/>
    <item android:id="@+id/action_rebuild" android:title="@string/rebuild"/>
    <item android:id="@+id/action_enable_backups" android:title="@string/enable_backups"/>
    <item android:id="@+id/action_disable_backups" android:title="@string/disable_backups"/>
    <item android:id="@+id/action_rename" android:title="@string/rename"/>
    <item android:id="@+id/action_destroy" android:title="@string/destroy"/>
</menu>
