<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/api_settings_title" >
        <EditTextPreference
            android:key="account_name_preference"
            android:summary="@string/summary_account_name"
            android:title="@string/account_name_label" />
        <EditTextPreference
            android:key="token_preference"
            android:summary="@string/summary_token"
            android:title="@string/token_label" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_title" >
        <ListPreference
            android:entries="@array/pref_sync_frequency_entries"
            android:entryValues="@array/pref_sync_frequency_values"
            android:key="pref_sync_frequency"
            android:summary="@string/summary_sync_frequency"
            android:title="@string/pref_sync_frequency_key_label" />
        <ListPreference
            android:entries="@array/pref_locale_entries"
            android:entryValues="@array/pref_locale_values"
            android:key="pref_locale"
            android:summary="@string/summary_locale"
            android:title="@string/pref_locale_key_label" />
        <CheckBoxPreference
            android:key="pref_auto_start_droplets"
            android:summary="@string/summary_auto_start_droplets"
            android:title="@string/pref_auto_start_droplets" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/application_title" >
        <Preference
            android:key="pref_clear_data"
            android:summary="@string/summary_clear_data"
            android:title="@string/pref_clear_data"
            />
    </PreferenceCategory>

</PreferenceScreen>