<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item 
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_1_navigation_refresh"
        android:title="@string/sync"
        app:showAsAction="ifRoom" />
    <item 
        android:id="@+id/action_add_droplet" 
        android:title="@string/action_add_droplet" />
    <item 
        android:id="@+id/action_add_domain" 
        android:title="@string/action_add_domain" />
    <item 
        android:id="@+id/action_add_record" 
        android:title="@string/action_add_record" />
    <item 
        android:id="@+id/action_add_ssh_key" 
        android:title="@string/action_add_ssh_key" />
    <item 
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_2_action_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item 
        android:id="@+id/action_switch_account"
        android:title="@string/action_switch_account" />
    <item 
        android:id="@+id/action_about"
        android:title="@string/action_about" />
</menu>