<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/distroImageView"
        	android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/unknown" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/distroImageView"
            android:orientation="vertical" >
            <TextView
		        android:id="@+id/nameTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="hostname"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
			<TextView
		        android:id="@+id/ipAddressTextView"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="123.123.123.123"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
			<TextView
			    android:id="@+id/statusTextView"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="status"
			    android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <ImageView
           	android:id="@+id/flagImageView"
	        android:layout_width="54dp"
	        android:layout_height="wrap_content"
	        android:src="@drawable/us_flag"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>
	
	<TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10dip">
	
	    <TableRow
	        android:id="@+id/tableRow6"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/cpus_label" />
	
	        <TextView
	            android:id="@+id/cpusTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/memory_label" />
	
	        <TextView
	            android:id="@+id/memoryTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="" />
	
	    </TableRow>
	    
	
	    <TableRow
	        android:id="@+id/tableRow5"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/disk_label" />
	
	        <TextView
	            android:id="@+id/diskTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="" />
	
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/tableRow8"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView8"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/image_label" />
	
	        <TextView
	            android:id="@+id/imageTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="" />
	
	    </TableRow>
	    <TableRow
	        android:id="@+id/tableRow7"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView7"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/region_label" />
	
	        <TextView
	            android:id="@+id/regionTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="" />
	
	    </TableRow>
	    <TableRow
	        android:id="@+id/tableRow1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/backups_active_label" />
	
	        <TextView
	            android:id="@+id/backupsActiveTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dip"
	            android:text="" />
	
	    </TableRow>
	    
	    <TableRow
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/virtio_active_label" />
	
	        <TextView
	            android:id="@+id/virtioActiveTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dip"
	            android:text="" />
	
	    </TableRow>
	    
	    <TableRow
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/ipv6_active_label" />
	
	        <TextView
	            android:id="@+id/ipv6ActiveTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dip"
	            android:text="" />
	
	    </TableRow>
	    
	    <TableRow
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/private_networking_active_label" />
	
	        <TextView
	            android:id="@+id/privateNetworkingActiveTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dip"
	            android:text="" />
	
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/tableRow2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/locked_label" />
	
	        <TextView
	            android:id="@+id/lockedTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/created_at_label" />
	
	        <TextView
	            android:id="@+id/createdAtTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="" />
	
	    </TableRow>
    </TableLayout>

</LinearLayout>